[package]
name = "beth-idle-reth"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
beth-idle = { path = "..", default-features = false }

uuid = { version = "1.11.0", optional = true, features = ["v4", "fast-rng"] }
eyre = { version = "0.6.12", optional = true }
tokio = { version = "1.38", features = ["rt", "time", "sync", "macros"], optional = true }
tokio-util = { version = "0.7", optional = true }
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
tokio = { version = "1.38", features = ["rt", "time", "sync", "macros", "test-util"] }

[features]
default = []
cli = [
    "beth-idle/gce-sdk",
    "dep:uuid",
    "dep:eyre",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tracing",
]
